update scholar user id and socials

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,7 +38,8 @@
   url={hhttps://doi.org/10.1007/s10915-021-01586-w},
   additional_info={. *More Information* can be [found here](https://github.com/ZEXINLIU/Uni_ttr_examples)},
   selected={true},
-  google_scholar_id={u5HHmVD_uO8C}
+  google_scholar_id={u5HHmVD_uO8C},
+  html={https://link.springer.com/article/10.1007/s10915-021-01586-w}
 }
 
 @article{uncertainsci2021brain,
@@ -146,6 +147,7 @@ abstract = { Abstract. Orthogonal polynomials of several variables have a vector
 additional_info={. *More Information* can be [found here](https://github.com/ZEXINLIU/Multi_ttr_examples)},
 selected={true},
 google_scholar_id={W7OEmFMy1HYC},
+html={https://epubs.siam.org/doi/abs/10.1137/22M1477131},
 preview={},
 html={},
 video={},
