--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,11 +35,10 @@
   year={2021},
   publisher={Springer US},
   doi={110.1007/s10915-021-01586-w},
-  url={hhttps://doi.org/10.1007/s10915-021-01586-w},
+  url={https://doi.org/10.1007/s10915-021-01586-w},
   additional_info={. *More Information* can be [found here](https://github.com/ZEXINLIU/Uni_ttr_examples)},
   selected={true},
   google_scholar_id={u5HHmVD_uO8C},
-  html={https://link.springer.com/article/10.1007/s10915-021-01586-w}
 }
 
 @article{uncertainsci2021brain,
@@ -60,7 +59,7 @@ To demonstrate the functionality and adaptability of UncertainSCI, we implemente
   publisher={Elsevier},
   doi={10.1016/j.brs.2021.10.226},
   url={https://doi.org/10.1016/j.brs.2021.10.226},
-  additional_info={. *More Information* can be [found here](hhttps://github.com/SCIInstitute/UncertainSCI)},
+  additional_info={. *More Information* can be [found here](https://github.com/SCIInstitute/UncertainSCI)},
   google_scholar_id={2osOgNQ5qMEC}
 }
 
@@ -73,7 +72,7 @@ volume = {152},
 pages = {106407},
 year = {2023},
 issn = {0010-4825},
-doi = {https://doi.org/10.1016/j.compbiomed.2022.106407},
+doi = {10.1016/j.compbiomed.2022.106407},
 url = {https://www.sciencedirect.com/science/article/pii/S0010482522011155},
 author = {Akil Narayan and Zexin Liu and Jake A. Bergquist and Chantel Charlebois and Sumientra Rampersad and Lindsay Rupp and Dana Brooks and Dan White and Jess Tate and Rob S. MacLeod},
 keywords = {Biomedical simulations, Uncertainty quantification, Open-source software},
@@ -85,7 +84,7 @@ Results:
 Concentrating on two test cases—modeling bioelectric potentials in the heart and electric stimulation in the brain—we illustrate the use of UncertainSCI to estimate variability, statistics, and sensitivities associated with multiple parameters in these models.
 Conclusion:
 UncertainSCI is a powerful yet lightweight tool enabling sophisticated probing of parametric variability and uncertainty in biomedical simulations. Its non-intrusive pipeline allows users to leverage existing software libraries and suites to accurately ascertain parametric uncertainty in a variety of applications.},
-additional_info={. *More Information* can be [found here](hhttps://github.com/SCIInstitute/UncertainSCI)},
+additional_info={. *More Information* can be [found here](https://github.com/SCIInstitute/UncertainSCI)},
 selected={true},
 publisher={Elsevier},
 google_scholar_id={UeHWp8X0CEIC}
@@ -125,7 +124,7 @@ with modeling pipelines for bioelectricity simulations.},
   publisher={The Open Journal},
   doi={10.21105/joss.04249},
   url={https://doi.org/10.21105/joss.04249},
-  additional_info={. *More Information* can be [found here](hhttps://github.com/SCIInstitute/UncertainSCI)},
+  additional_info={. *More Information* can be [found here](https://github.com/SCIInstitute/UncertainSCI)},
   selected={true},
   google_scholar_id={eQOLeE2rZwMC},
 }
@@ -147,7 +146,6 @@ abstract = { Abstract. Orthogonal polynomials of several variables have a vector
 additional_info={. *More Information* can be [found here](https://github.com/ZEXINLIU/Multi_ttr_examples)},
 selected={true},
 google_scholar_id={W7OEmFMy1HYC},
-html={https://epubs.siam.org/doi/abs/10.1137/22M1477131},
 preview={},
 html={},
 video={},
