try manual citation

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -87,7 +87,8 @@ UncertainSCI is a powerful yet lightweight tool enabling sophisticated probing o
 additional_info={. *More Information* can be [found here](https://github.com/SCIInstitute/UncertainSCI)},
 selected={true},
 publisher={Elsevier},
-google_scholar_id={UeHWp8X0CEIC}
+google_scholar_id={UeHWp8X0CEIC},
+citations={26}
 }
 
 @article{TATE202384249,
