cancel scholar citation

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,7 +39,7 @@
   url={https://link.springer.com/article/10.1007/s10915-021-01586-w},
   additional_info={. *More Information* can be [found here](https://github.com/ZEXINLIU/Uni_ttr_examples)},
   selected={true},
-  google_scholar_id={u5HHmVD_uO8C},
+  google_scholar_id={u5HHmVD_uO8C}
 }
 
 @article{Tate2021brs,
@@ -88,8 +88,7 @@ UncertainSCI is a powerful yet lightweight tool enabling sophisticated probing o
 additional_info={. *More Information* can be [found here](https://github.com/SCIInstitute/UncertainSCI)},
 selected={true},
 publisher={Elsevier},
-google_scholar_id={UeHWp8X0CEIC},
-citation={26}
+google_scholar_id={UeHWp8X0CEIC}
 }
 
 @article{Tate2023joss,
